--- a/booking-microservice-dev.properties
+++ b/booking-microservice-dev.properties
@@ -3,4 +3,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.datasource.url=jdbc:mysql://localhost:3306/booking
-app.testProp=Property of test updated
+app.testProp=Property of test updatedee
